# rusty-tris

./: .gitignore  Cargo.toml  LICENSE  README.it.md
src/: main.rs
src/matrix/: mod.rs  vector.rs
